--- a/.github/workflows/turnip_builder.yml
+++ b/.github/workflows/turnip_builder.yml
@@ -1,9 +1,8 @@
 name: Turnip Gen8 Auto-Build
 
 on:
-  workflow_dispatch: # Botão manual
+  workflow_dispatch:
   schedule:
-    # Roda a cada 12 horas (ex: 00:00 e 12:00 UTC)
     - cron: '0 */12 * * *'
 
 jobs:
@@ -18,12 +17,14 @@ jobs:
       - name: Setup Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y meson ninja-build patchelf unzip flex bison git perl python3-pip
-          pip3 install mako
+          # Removido 'meson' do apt-get para evitar versão antiga
+          sudo apt-get install -y ninja-build patchelf unzip flex bison git perl python3-pip
+          # Instalando Meson via PIP para garantir versão >1.4.0
+          pip3 install --upgrade meson mako
 
       - name: Calculate Version
         id: version
-        # Run 1 = V11, Run 2 = V12, etc.
+        # Run 1 = V11
         run: echo "V_NUM=$((GITHUB_RUN_NUMBER + 10))" >> $GITHUB_ENV
 
       - name: Make Script Executable
