--- a/.github/workflows/turnip_builder.yml
+++ b/.github/workflows/turnip_builder.yml
@@ -4,49 +4,48 @@ on:
   workflow_dispatch:
     inputs:
       build_id:
-        description: 'Version Tag (e.g. v1)'
+        description: 'Tag (Ex: v1)'
         required: true
         default: 'v1'
 
 jobs:
-  compile_driver:
-    name: Compiling Turnip ${{ inputs.build_id }}
+  build:
+    name: Build ${{ inputs.build_id }}
     runs-on: ubuntu-24.04
     
     steps:
-      - name: Checkout Source
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Build Tools
+      - name: Install Dependencies
         run: |
-          # Habilitando fontes deb-src para dependências de build
-          sudo sed -i 's/^Types: deb$/Types: deb deb-src/' /etc/apt/sources.list.d/ubuntu.sources
           sudo apt-get update
-          # Instalando tudo em um comando só para ser mais rápido
-          sudo apt-get install -y build-essential flex bison glslang-tools meson python3-pip ninja-build pkg-config
+          # Instalamos dependências de sistema
+          sudo apt-get install -y build-essential flex bison glslang-tools python3-pip ninja-build pkg-config unzip curl git
+          
+          # AQUI ESTÁ A CORREÇÃO DO ERRO 1.3.2:
+          # Forçamos a instalação do Meson mais novo via Python
+          sudo pip3 install --upgrade meson mako --break-system-packages
 
-      - name: Run Build Script
+      - name: Run Builder
         run: |
           chmod +x build_driver.sh
           ./build_driver.sh "${{ inputs.build_id }}"
 
-      - name: Upload Artifacts
+      - name: Upload
         uses: actions/upload-artifact@v4
         with:
           name: Turnip-A8xx-${{ inputs.build_id }}
           path: out/*.zip
 
-      - name: Create Release
+      - name: Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ inputs.build_id }}
           name: Turnip A8xx ${{ inputs.build_id }}
           files: out/*.zip
           body: |
-            **Automated Build - A8xx Series**
-            
+            **Automated Build**
             - **Source:** Whitebelyash (gen8-hacks)
-            - **Compatibility:** Adreno 830/840 (Optimized for Switch Emulators)
-            - **Fixes:** `libbacktrace` disabled (Fixes crash on Yuzu/Sudachi)
-            
-            *Built with NDK r29 & LLVM*
+            - **Fixes:** Libbacktrace disabled (Switch Fix)
+            - **NDK:** r29
