--- a/.github/workflows/turnip_build.yml
+++ b/.github/workflows/turnip_build.yml
@@ -1,9 +1,13 @@
 name: Build Turnip
 
 on:
-  workflow_dispatch: # Isso cria o botão manual
+  workflow_dispatch: # Botão manual
   schedule:
-    - cron: '0 */12 * * *' # Roda automaticamente a cada 12h
+    - cron: '0 */12 * * *' # Roda a cada 12h
+
+# PERMISSÕES SÃO OBRIGATÓRIAS PARA CRIAR RELEASE
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -25,8 +29,31 @@ jobs:
       - name: Compilar Driver
         run: ./turnip_builder.sh
 
-      - name: Upload do Driver (Artifact)
+      # PASSO NOVO: Lê as informações geradas pelo script (tag, nome, descrição)
+      - name: Ler Metadados da Release
+        id: meta
+        run: |
+          echo "TAG_NAME=$(cat turnip_workdir/tag)" >> $GITHUB_ENV
+          echo "RELEASE_NAME=$(cat turnip_workdir/release)" >> $GITHUB_ENV
+          echo "ZIP_PATH=$(ls turnip_workdir/*.zip)" >> $GITHUB_ENV
+
+      # Upload do Artefato (Backup)
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: driver-turnip
-          path: turnip_workdir/*.zip
+          name: driver-turnip-backup
+          path: ${{ env.ZIP_PATH }}
+
+      # Cria a Release Oficial na aba "Releases"
+      - name: Publicar Release
+        uses: softprops/action-gh-release@v1
+        if: github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'
+        with:
+          tag_name: ${{ env.TAG_NAME }}
+          name: ${{ env.RELEASE_NAME }}
+          body_path: turnip_workdir/description
+          files: ${{ env.ZIP_PATH }}
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
