--- a/.github/workflows/turnip_build.yml
+++ b/.github/workflows/turnip_build.yml
@@ -5,7 +5,7 @@ on:
   schedule:
     - cron: '0 */12 * * *' # Roda a cada 12h
 
-# PERMISSÕES SÃO OBRIGATÓRIAS PARA CRIAR RELEASE
+# Permissões necessárias para criar Releases
 permissions:
   contents: write
 
@@ -29,22 +29,24 @@ jobs:
       - name: Compilar Driver
         run: ./turnip_builder.sh
 
-      # PASSO NOVO: Lê as informações geradas pelo script (tag, nome, descrição)
+      # PASSO CORRIGIDO:
+      # Filtra para pegar apenas o ZIP que começa com "Turnip-"
+      # O '| head -n 1' garante que só uma linha seja passada, evitando erro de formato
       - name: Ler Metadados da Release
         id: meta
         run: |
           echo "TAG_NAME=$(cat turnip_workdir/tag)" >> $GITHUB_ENV
           echo "RELEASE_NAME=$(cat turnip_workdir/release)" >> $GITHUB_ENV
-          echo "ZIP_PATH=$(ls turnip_workdir/*.zip)" >> $GITHUB_ENV
+          echo "ZIP_PATH=$(ls turnip_workdir/Turnip-*.zip | head -n 1)" >> $GITHUB_ENV
 
-      # Upload do Artefato (Backup)
+      # Faz upload do arquivo como artefato (Backup no Actions)
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: driver-turnip-backup
           path: ${{ env.ZIP_PATH }}
 
-      # Cria a Release Oficial na aba "Releases"
+      # Cria a Release oficial na aba "Releases"
       - name: Publicar Release
         uses: softprops/action-gh-release@v1
         if: github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'
