--- a/.github/workflows/turnip_build.yml
+++ b/.github/workflows/turnip_build.yml
@@ -2,8 +2,10 @@ name: Build Turnip
 
 on:
   workflow_dispatch: # Botão manual
-  schedule:
-    - cron: '0 */12 * * *' # Roda a cada 12h
+  push:
+    branches: [ normal ]
+  # schedule:
+  #   - cron: '0 */12 * * *' # Roda a cada 12h
 
 # Permissões necessárias para criar Releases
 permissions:
