chore: change mesasrc and upload artifact

--- a/.github/workflows/turnip_builder.yml
+++ b/.github/workflows/turnip_builder.yml
@@ -21,45 +21,52 @@ jobs:
         sudo sed -i 's/^Types: deb$/Types: deb deb-src/' /etc/apt/sources.list.d/ubuntu.sources
         sudo apt update
         sudo apt install build-essential flex bison glslang-tools
-        sudo apt install meson-1.5 
+        sudo apt install python3-pip
+        pip3 install meson==1.5.0 --break-system-packages
 
     - name: Execute build script
       run: bash ./turnip_builder.sh
 
-    - name: Release "turnip"
-      uses: softprops/action-gh-release@v1
-      with:
-        body: |
-          A8XX Turnip Vulkan V${{ inputs.version }}  
-          Built from: https://github.com/whitebelyash/mesa-tu8
+    # - name: Release "turnip"
+    #   uses: softprops/action-gh-release@v1
+    #   with:
+    #     body: |
+    #       A8XX Turnip Vulkan V${{ inputs.version }}  
+    #       Built from: https://github.com/whitebelyash/mesa-tu8
           
-          >[!WARNING]
-          > This release is still Beta, especially for devices other than Adreno 840. PLEASE, don't report any issues to Mesa
-          > Original merge request is Draft again, so it's not ready
+    #       >[!WARNING]
+    #       > This release is still Beta, especially for devices other than Adreno 840. PLEASE, don't report any issues to Mesa
+    #       > Original merge request is Draft again, so it's not ready
           
-          > [!NOTE]  
-          > This release is newer than @StevenMXZ (https://github.com/StevenMXZ/freedreno_turnip-CI/) V17 driver. This is because we have desync'ed our release versioning (accidentally)
+    #       > [!NOTE]  
+    #       > This release is newer than @StevenMXZ (https://github.com/StevenMXZ/freedreno_turnip-CI/) V17 driver. This is because we have desync'ed our release versioning (accidentally)
           
-          Supports following GPUs:
-          - Adreno 825 (tested, working with minor glitches compared to A830) - GMEM/sysmem
-          - Adreno 830 (tested, working) - sysmem-only - gmem causes GPU hangs
-          - Adreno 840 (tested, working) - GMEM/sysmem
-          Following GPUs were added but no proper testing was done:
-          - Adreno 810 (I'm not sure if it's even A8XX, blindly changing parameters doesn't help)
-          - Adreno 829 (no testers were found)
+    #       Supports following GPUs:
+    #       - Adreno 825 (tested, working with minor glitches compared to A830) - GMEM/sysmem
+    #       - Adreno 830 (tested, working) - sysmem-only - gmem causes GPU hangs
+    #       - Adreno 840 (tested, working) - GMEM/sysmem
+    #       Following GPUs were added but no proper testing was done:
+    #       - Adreno 810 (I'm not sure if it's even A8XX, blindly changing parameters doesn't help)
+    #       - Adreno 829 (no testers were found)
           
-          GPUs other than 830/840 can have reduced performance and/or more glitches. Can't do anything about that, sorry!
+    #       GPUs other than 830/840 can have reduced performance and/or more glitches. Can't do anything about that, sorry!
           
-          Files:
-          * gen8 - main branch (upstream MR + hacks applied)
+    #       Files:
+    #       * gen8 - main branch (upstream MR + hacks applied)
           
-          Notes:
-          * Disable DXVK_HUD if you see weird black artifacts
-          * Apparently there are swizzling glitches in Eden & maybe other emulators, try increasing render scale(?)
-          * Some games may require AMD/NVIDIA GPU to run and refuse to start on Qualcomm or block some features. I've included a patch to spoof as Steam Deck - use `TU_DEBUG=deck_emu`
-          * If too unstable - activate nolrz: `TU_DEBUG=nolrz`.
+    #       Notes:
+    #       * Disable DXVK_HUD if you see weird black artifacts
+    #       * Apparently there are swizzling glitches in Eden & maybe other emulators, try increasing render scale(?)
+    #       * Some games may require AMD/NVIDIA GPU to run and refuse to start on Qualcomm or block some features. I've included a patch to spoof as Steam Deck - use `TU_DEBUG=deck_emu`
+    #       * If too unstable - activate nolrz: `TU_DEBUG=nolrz`.
 
-        tag_name: tu_v${{ inputs.version }}
-        name: Turnip A8XX v${{ inputs.version }}
-        files: |
-           /tmp/a8xx-gen8-V${{ inputs.version }}.zip
+    #     tag_name: tu_v${{ inputs.version }}
+    #     name: Turnip A8XX v${{ inputs.version }}
+    #     files: |
+    #        /tmp/a8xx-gen8-V${{ inputs.version }}.zip
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: Turnip-Driver-v${{ inputs.version }}
+        path: /tmp/a8xx-gen8-V${{ inputs.version }}.zip
+        if-no-files-found: error
