--- a/.github/workflows/turnip_builder.yml
+++ b/.github/workflows/turnip_builder.yml
@@ -73,6 +73,6 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: Turnip-Driver-v${{ inputs.version }}
-        path: /tmp/a8xx-gen8-V${{ inputs.version }}.zip
+        name: Turnip-Driver-v${{ inputs.version }}-${{ inputs.mesa_branch }}
+        path: /tmp/a8xx-V${{ inputs.version }}-${{ inputs.mesa_branch }}.zip
         if-no-files-found: error
